--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,9 @@ dependencies:
   flutter_tts: ^4.2.3
   file_picker: ^8.1.2
   alarm: ^2.1.1
-  
+  animated_text_kit: ^4.2.2
+  flutter_staggered_animations: ^1.1.1
+  intl: ^0.18.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
