--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
-SPEECH_API_URL=http://192.168.225.252:5000
-FACE_API_URL=http://192.168.225.252:5001
-MCP_BASE_URL=http://192.168.225.252:5002
-GEMINI_API_KEY=AIzaSyA8CEoWywNo52mbVR1o3z71hkVhqvL1yCg
+SPEECH_API_URL=http://192.168.1.121:5000
+FACE_API_URL=http:// 192.168.1.121:5001
+MCP_BASE_URL=http://192.168.1.121:5002
+API_BASE_URL=http://192.168.1.121:5002
+GEMINI_API_KEY=AIzaSyBzboS87UVkIrKCCjNbEv-3Y7vdULYxJbo
+MONGODB_USERNAME = starboy_user
+MONGODB_PASSWORD = 55359279
+MONGODB_CLUSTER = cluster0.qnn7pyq.mongodb.net  
+DATABASE_NAME = starboy_db
