--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,9 @@ dependencies:
   web_socket_channel: ^3.0.3
   flutter_tts: ^4.2.3
   file_picker: ^8.1.2
-  alarm: ^2.1.1
-  animated_text_kit: ^4.2.2
-  flutter_staggered_animations: ^1.1.1
-  intl: ^0.18.1
+  flutter_local_notifications: ^17.2.3
+  audioplayers: ^6.1.0  
+  mailer: ^5.2.0 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -84,6 +83,7 @@ flutter:
     - assets/model/model_file_30epochs.tflite
     - .env
     - assets/alarm.mp3
+    - assets/Starboy/
 
 
 
